Fixed alignment of boxes

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -42,8 +42,6 @@ nav {
         flex-direction: column;
         background-color: #eee;
         padding: 20px;
-        margin-left: 10px;
-        margin-right: 10px;
 
         .recipe-ingredient {
             display: block;
